fixed syntax error causing shift

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -51,7 +51,6 @@ p {
   font-weight: 400;
   font-style: normal;
   font-display: swap;
-  font-display: swap;
 }
 
 /* button */
@@ -1953,7 +1952,7 @@ button.btn5:hover {
   .menu-toggle img {
     max-width: 100%;
     width: 100%;
-    height: 100%;
+    height: auto;
     object-fit: cover;
     aspect-ratio: 1 / 1;
   }
@@ -2056,10 +2055,16 @@ button.btn5:hover {
 
   .blog-hero-section img {
     margin-top: 0;
+    width: 100%;
+    height: auto;
   }
 
   .grid2-section2 img {
     object-position: left center;
+    width: 100%;
+    height: auto;
+    aspect-ratio: 16 / 9;
+    object-fit: cover;
   }
 
   .grid2 {
@@ -2077,14 +2082,10 @@ button.btn5:hover {
   }
 
   .grid2-section2 {
-    width: 80vw;
-    height: auto;
-  }
-
-  .grid2-section2 img {
     width: 100%;
+    max-width: 100vw;
     height: auto;
-    object-fit: cover;
+    min-height: 3vh;
   }
 
   .category-buttons1,
@@ -2098,7 +2099,7 @@ button.btn5:hover {
 
   .categories-title,
   .feature-title {
-    padding: 3em 0 0.5em;
+    padding: 2em 0 0.5em;
     width: 80%;
     max-width: 80vw;
     height: auto;
